# rl_controller

./: CMakeLists.txt  README.md  eval_policy_io.csv
etc/: RLController.in.yaml
policy/: policy.onnx
src/: CMakeLists.txt  PolicySimulatorHandling.h  RLController.cpp  RLController.h  RLPolicyInterface.cpp  RLPolicyInterface.h  RL_utils.cpp  RL_utils.h  api.h  lib.cpp  utils.cpp  utils.h
src/states/: CMakeLists.txt  Posture_FDTask_Pos.cpp  Posture_FDTask_Pos.h  Posture_FDTask_Torque.cpp  Posture_FDTask_Torque.h  Posture_Pos.cpp  Posture_Pos.h  Posture_Torque.cpp  Posture_Torque.h  Posture_TorqueTask_Pos.cpp  Posture_TorqueTask_Pos.h  Posture_TorqueTask_Torque.cpp  Posture_TorqueTask_Torque.h  PureRL_FDTask_Pos.cpp  PureRL_FDTask_Pos.h  PureRL_FDTask_Torque.cpp  PureRL_FDTask_Torque.h  PureRL_Pos.cpp  PureRL_Pos.h  PureRL_Torque.cpp  PureRL_Torque.h  PureRL_TorqueTask_Pos.cpp  PureRL_TorqueTask_Pos.h  PureRL_TorqueTask_Torque.cpp  PureRL_TorqueTask_Torque.h  RLController_Initial.cpp  RLController_Initial.h  RLExecution.cpp  RLExecution.h  RL_QP_FDTask_Pos.cpp  RL_QP_FDTask_Pos.h  RL_QP_FDTask_Torque.cpp  RL_QP_FDTask_Torque.h  RL_QP_Pos.cpp  RL_QP_Pos.h  RL_QP_Torque.cpp  RL_QP_Torque.h  RL_QP_TorqueTask_Pos.cpp  RL_QP_TorqueTask_Pos.h  RL_QP_TorqueTask_Torque.cpp  (+1 more)
